[gd_scene load_steps=5 format=3 uid="uid://mgqf0hweh5h8"]

[ext_resource type="Theme" uid="uid://da2feywqtmki" path="res://theme.tres" id="1_hy0qq"]
[ext_resource type="PackedScene" uid="uid://doo4hph7vj7lr" path="res://objects/paint.tscn" id="2_1uc1t"]
[ext_resource type="Script" path="res://scenes/ui/title.gd" id="2_362du"]
[ext_resource type="PackedScene" uid="uid://buoqly7yyvp10" path="res://objects/eyestrain.tscn" id="3_sxvmw"]

[node name="title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -1919.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hy0qq")
script = ExtResource("2_362du")

[node name="TitleText" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = 3.0
offset_top = 122.0
offset_right = 1925.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "DrawDog Online"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1215.0
offset_top = 224.0
offset_right = 1785.0
offset_bottom = 838.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="IPTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Host:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProtocolSelect" type="OptionButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../IPEnter")
focus_neighbor_bottom = NodePath("../../../JoinButton")
focus_next = NodePath("../IPEnter")
focus_previous = NodePath("../../../JoinButton")
item_count = 2
selected = 0
popup/item_0/text = "ws://"
popup/item_0/id = 0
popup/item_1/text = "wss://"
popup/item_1/id = 1

[node name="IPEnter" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ProtocolSelect")
focus_neighbor_right = NodePath("../../../VBoxContainer2/UsernameEnter")
focus_neighbor_bottom = NodePath("../../../JoinButton")
focus_next = NodePath("../../../VBoxContainer2/UsernameEnter")
focus_previous = NodePath("../ProtocolSelect")
theme_override_font_sizes/font_size = 36
clear_button_enabled = true
caret_blink = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="UsernameTitle" type="Label" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Username:"
horizontal_alignment = 1

[node name="UsernameEnter" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/HBoxContainer/IPEnter")
focus_neighbor_bottom = NodePath("../../JoinButton")
focus_next = NodePath("../../JoinButton")
focus_previous = NodePath("../../VBoxContainer/HBoxContainer/IPEnter")
theme_override_font_sizes/font_size = 36
placeholder_text = "Default"
clear_button_enabled = true

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../VBoxContainer/HBoxContainer/IPEnter")
focus_previous = NodePath("../VBoxContainer2/UsernameEnter")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Join"

[node name="SetDogButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../VBoxContainer/HBoxContainer/IPEnter")
focus_previous = NodePath("../VBoxContainer2/UsernameEnter")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Set Dog"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../VBoxContainer/HBoxContainer/IPEnter")
focus_previous = NodePath("../VBoxContainer2/UsernameEnter")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Settings"

[node name="Status" type="Label" parent="."]
layout_mode = 0
offset_top = 956.0
offset_right = 571.0
offset_bottom = 1058.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
horizontal_alignment = 1

[node name="paint" parent="." instance=ExtResource("2_1uc1t")]
set_paint_target = false
init_paint_string = "eJztmgmShCAMRcuaeP8rT6ss+VlwY+uq/jOlNiI8QwKILssA0abSOabFyclyNIJzSpcpFiFeeUp5406MbCLJoNn/PDqW6ldavPJKKflCIwftfNDq14vX+QsllPHd2veky44mXdhnEaefu3Pw2EfXXir+bbClxq+FVF0k9vNJEdbv/F5KED5wmgYdOpYPB7f9+kIX9VaERtxrulHhlZ7nNaImvOGMgaspYqrjKSErp1lTs0EFCXOl3qAJv/sTJrNw0jPCJpYkaSPKAYOoFiHhMbR2LVxi8RKJOA0BIRpT0kDMVPNNNoPlDcUJF4ZoEkYY6HmqRTiJMc8gFJVKMnCIfCkYtB6h9jlB4BGqvC0J47EgDK3tEhn3WJ2Qj3i56GQ2TigzeTdZm9Cey2J99wxTnbC6piZs4odLzXGrFqBYc3CKzVFzo+AqgCFOJaAsmPcub6u8qcOAQGhxqE6Sn2mLjfM/NeIpRPmzWjScEIrJjZ7C5pSMNQGhMXgkJyCepSUhyb0NMi+hChE4Ie+iF2Gar0JYK0LuCe34WAznlGQVCGsWO5qwISapA9a/mR2P2Q+1IySD8MlspCGhcTSXvoDQbOWpND/hN65jzycxc1BaD/XCMURsq7Sx/W0aSRkGM+NMwgsaxugRIl5g7A23yyE0AD+I3ek24YNU1BEfcxAukjBE77q1agCLm2HBwgnBcimQ42YCQhm+0xFK15OEg7rvTKhiQxCO6rsToRG8GCnRiL0RM6HuAOXvMYiR0BpFPMK+iIlQAU5GaI1zkxFqwLkITROufAeInQm3/4IJcRbRn5DOCD90cqbT3YQbpR8n2ZLZjL0Bt+26MhqLMLtj/zY+ONWMMKOhCfuHSdwxX0NCcMPucYzPyyuYy3oOGDBrwP3R1AtMZMCSnfmMVZGDYmVdyqBxRIKJp7115HMTyF1Y2nvpzjCm0gsndWbsalLW2crXeP0IK6i4fDiFvoDweDM2GqMoe3VuKs1P2Pirqhr6EWJlT15GVyf0CeSnJ+dXUvyugSecVF58J4/v90vVqxz80wWkOdLh64Fi5d5veXc6dwnZMFI+re6ZTPnYboazq90MKukfyHZT3Q=="
init_paint_size = 14742
init_palette = Array[Color]([Color(0, 0.952941, 0.866667, 1), Color(0.847059, 1, 0.333333, 1), Color(1, 0.65098, 0.580392, 1), Color(0.713726, 0.603922, 1, 1), Color(0, 0, 0, 1)])

[node name="Eyestrain" parent="." instance=ExtResource("3_sxvmw")]

[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SetDogButton" to="." method="_on_set_dog_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
